name:                http-load-tester
version:             0.1.0.0
synopsis:            A small command line app for HTTP load testing
description:
  A library and command line tool for HTTP load testing.  You can
  think of this package as similar to `httperf` or `ab`, only more
  modern, faster, more scalable, easier to deal with, and
  programmable.
homepage:            https://github.com/mailrank/http-load-tester
license:             BSD3
license-file:        LICENSE
author:              Bryan O'Sullivan <bos@mailrank.com>
maintainer:          Bryan O'Sullivan <bos@mailrank.com>
copyright:           2011 MailRank, Inc.
category:            Network
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:  
    README.markdown
    servers/ping/ping-servers.cabal
    servers/ping/src/*.hs

flag developer
  description: operate in developer mode
  default: False

library
  hs-source-dirs: lib
  exposed-modules:
    Network.HTTP.LoadTest

  ghc-options: -Wall
  if flag(developer)
    ghc-prof-options: -auto-all

  build-depends:
    base < 5,
    bytestring,
    criterion >= 0.5.1.0,
    http-enumerator,
    statistics,
    time,
    vector,
    vector-algorithms

executable http-load-tester
  hs-source-dirs: app
  main-is:        App.hs

  ghc-options: -threaded -rtsopts -Wall
  if flag(developer)
    ghc-prof-options: -auto-all

  build-depends:
    base < 5,
    cmdargs >= 0.7,
    criterion,
    http-load-tester,
    network,
    statistics,
    text,
    text-format

source-repository head
  type:     git
  location: git://github.com/mailrank/http-load-tester

source-repository head
  type:     mercurial
  location: https://bitbucket.org/bos/http-load-tester
