name:                pronk
version:             0.1.0.0
synopsis:            A library and command line app for HTTP load testing
description:
  A library and command line tool for HTTP load testing.  You can
  think of this package as similar to `httperf` or `ab`, only more
  modern, faster, more scalable, easier to deal with, and
  programmable.
  .
  The name "pronk" comes from the Afrikaans verb /pronk-/, meaning
  "to show off" or "to strut".
homepage:            https://github.com/bos/pronk
license:             BSD3
license-file:        LICENSE
author:              Bryan O'Sullivan <bos@serpentine.com>
maintainer:          Bryan O'Sullivan <bos@serpentine.com>
copyright:           2011 MailRank, Inc.
category:            Network
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:  
    README.markdown
    servers/ping/ping-servers.cabal
    servers/ping/src/*.hs

flag developer
  description: operate in developer mode
  default: False

library
  hs-source-dirs: lib
  exposed-modules:
    Network.HTTP.LoadTest
    Network.HTTP.LoadTest.Analysis
    Network.HTTP.LoadTest.Environment
    Network.HTTP.LoadTest.Report
    Network.HTTP.LoadTest.Types

  ghc-options: -Wall
  if flag(developer)
    ghc-prof-options: -auto-all

  build-depends:
    aeson,
    base < 5,
    bytestring,
    case-insensitive,
    criterion >= 0.5.1.0,
    deepseq,
    hashable >= 1.1.2.0,
    http-enumerator >= 0.7,
    http-types,
    statistics,
    text,
    text-format >= 0.3.0.4,
    time,
    unix-compat >= 0.2.2,
    unordered-containers >= 0.1.4.0,
    vector,
    vector-algorithms

executable pronk
  hs-source-dirs: app
  main-is: App.hs
  c-sources: app/cbits/rtsopts.c

  ghc-options: -threaded -rtsopts -Wall

  if flag(developer)
    ghc-prof-options: -auto-all

  build-depends:
    aeson,
    base < 5,
    bytestring,
    cmdargs >= 0.7,
    criterion,
    deepseq,
    http-enumerator,
    pronk,
    network,
    text,
    text-format,
    time

source-repository head
  type:     git
  location: git://github.com/bos/pronk

source-repository head
  type:     mercurial
  location: https://bitbucket.org/bos/pronk
