Name:                ping-server-snap
Version:             0
Build-type:          Simple
Cabal-version:       >=1.2

Executable ping-server-snap
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base >= 4 && < 5,
    bytestring >= 0.9.1 && < 0.10,
    snap == 0.5.*,
    snap-core == 0.5.*,
    snap-server == 0.5.*

  ghc-options: -rtsopts -threaded -Wall
